--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -8,9 +8,14 @@
 </head>
 <body>
     <h1>Olá, mundo!</h1>
+    <hr>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
     Praesentium cum nesciunt magnam id reprehenderit officiis eos
     sit quam adipisci dolores error eveniet placeat, eius vitae
     temporibus voluptates inventore eaque laudantium?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    Totam eos quo labore? Ratione, quia possimus. Dignissimos
+    eum veniam, asperiores aliquam saepe ut iure distinctio illum
+    veritatis voluptates sapiente. Eum, dicta.</p>
 </body>
 </html>
